--- a/JAVASCRIPT/13-EjemploPOO.html
+++ b/JAVASCRIPT/13-EjemploPOO.html
@@ -11,6 +11,9 @@
 <body>
 <p> Pulsa el boton para crear un contacto y mostrarlo por pantalla</p>
 <button onclick="CrearContacto();" >Crear contacto</button>
+<input type="text" id="nombre">
+<input type="text" id="telefono">
+<button onclick="ModificarContacto();" >Modificar Contacto</button>
 <p id="Resultado" >
 	Nuevo Contacto : 
 </p>
